[gd_scene load_steps=2 format=3 uid="uid://c4settings1234"]

[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="1_script"]

[node name="SettingsMenu" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -150.0
offset_right = 160.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="VolumeHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeNameLabel" type="Label" parent="MarginContainer/VBox/VolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBox/VolumeHBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBox/VolumeHBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "100%"
horizontal_alignment = 2

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Reset Progress"

[node name="QuitButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quit to Desktop"

[node name="Separator3" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Close"

[node name="VersionLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "v1.0.0"
horizontal_alignment = 1

[node name="ConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Reset"
initial_position = 1
size = Vector2i(300, 100)

[connection signal="pressed" from="MarginContainer/VBox/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="confirmed" from="ConfirmDialog" to="." method="_on_confirm_dialog_confirmed"]
